kubernetes/apps/kube-system/cilium/gateway/external.sops.yaml
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.aknuk.dev
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.8.203
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: external.aknuk.dev
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.aknuk.dev'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.aknuk.dev'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: aknuk-dev-production-tls
sops:
  age:
    - recipient: age1ptne7j9y9v4vdkjaj4e97kk6cexs0vtfn8lswryc584xguudj4usfga4el
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKRi90YlJyZjJEQ3hxNlNP
[...]
        mNPI7MdYQoAULF/nEwDClOjQsnUjLE3zlo6eXmMc6BiYu7DPPf8WTw==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-10-01T13:44:11Z"
  mac: ENC[AES256_GCM,data:i9NZiHb+SWySuDJ2ucmPYAn23E4cveyEKueLxwlVK2W6e82a8JGgi1yrBIYTty8upWRHykozcWVaPZKHweE03YDAzMEIFXSfB2Q3oDRGQCbRx71S9y5UZvwioaC0KnABas+ivnZ3NgeF6XfxQ0chUVJ2cghhthKcc+7Nn2qWuzQ=,iv:wlrk3JvN4emBj1jJv+A+Thurh70GljKVcptOVHKFZ/M=,tag:iKu+lgm2r0/5rEY7ESQ13g==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.11.0
